--- a/src/app/components/counter-buttons/counter-buttons.component.html
+++ b/src/app/components/counter-buttons/counter-buttons.component.html
@@ -1,1 +1,7 @@
-<p>counter-buttons works!</p>
+<div>
+    <button class="btn btn-primary">Increment</button>
+
+    <button class="btn btn-secondary">Decrement</button>
+
+    <button class="btn btn-warning">Reset</button>
+</div>
