--- a/src/app/components/counter-buttons/counter-buttons.component.html
+++ b/src/app/components/counter-buttons/counter-buttons.component.html
@@ -1,7 +1,7 @@
 <div>
-    <button class="btn btn-primary">Increment</button>
+    <button class="btn btn-primary" (click)="onIncrement()">Increment</button>
 
-    <button class="btn btn-secondary">Decrement</button>
+    <button class="btn btn-secondary" (click)="onDecrement()">Decrement</button>
 
-    <button class="btn btn-warning">Reset</button>
+    <button class="btn btn-warning" (click)="onReset()">Reset</button>
 </div>
