--- a/src/app/components/counter-output/counter-output.component.html
+++ b/src/app/components/counter-output/counter-output.component.html
@@ -1,4 +1,4 @@
 <p>counter-output works!</p>
 <div>
-    <h3>counter is: {{counter}}</h3>
+    <h3>counter is: {{(counter$ | async).counter}}</h3>
 </div>
