--- a/src/app/components/counter/counter.component.html
+++ b/src/app/components/counter/counter.component.html
@@ -7,6 +7,10 @@
         </div>
 
         <div class="my-3">
+            <app-custom-counter-input></app-custom-counter-input>
+        </div>
+
+        <div class="my-3">
             <app-counter-buttons></app-counter-buttons>
         </div>
      </div>
