--- a/src/app/components/custom-counter-input/custom-counter-input.component.html
+++ b/src/app/components/custom-counter-input/custom-counter-input.component.html
@@ -1,5 +1,11 @@
 <p>custom-counter-input works!</p>
 <div>
+    <div>{{channeldata}}</div>
     <input type="text" [(ngModel)]="value" />
     <button class="btn btn-primary" (click)="onAdd()">Add To Counter</button>
 </div>
+
+<div>
+    <button (click)="onchangechannel()">change title</button>
+</div>
+
