commit for disadvantage-not using selectors

--- a/src/app/components/custom-counter-input/custom-counter-input.component.html
+++ b/src/app/components/custom-counter-input/custom-counter-input.component.html
@@ -1,6 +1,6 @@
 <p>custom-counter-input works!</p>
 <div>
-    <div>{{channeldata}}</div>
+    <div>{{(channelData$ | async)}}</div>
     <input type="text" [(ngModel)]="value" />
     <button class="btn btn-primary" (click)="onAdd()">Add To Counter</button>
 </div>
