--- a/src/app/components/counter/counter.component.html
+++ b/src/app/components/counter/counter.component.html
@@ -1,6 +1,5 @@
 <p>counter works!</p>
-<p>counter-buttons works!</p>
-<div class="row">
+<div class="row a">
      <div class="col-md-12">
         <div class="my-3">
             <app-counter-output></app-counter-output>
