--- a/src/app/posts/postlist/postlist.component.html
+++ b/src/app/posts/postlist/postlist.component.html
@@ -1,1 +1,22 @@
 <p>postlist works!</p>
+<div class="row">
+    <div class="col-md-12">
+        <h3>Posts Lists</h3>
+        <table class="table table-striped" *ngIf="posts$ |async as postData">
+            <thead>
+                <tr>   
+                <td>ID</td>
+                <td>TITLE</td>
+                <td>DESCRIPTION</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let post of postData">
+                    <td>{{post.id}}</td>
+                    <td>{{post.title}}</td>
+                    <td>{{post.description}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
