--- a/src/app/posts/postlist/postlist.component.html
+++ b/src/app/posts/postlist/postlist.component.html
@@ -1,7 +1,11 @@
 <p>postlist works!</p>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-8">
         <h3>Posts Lists</h3>
+
+        <div>
+            <a href="#" class="btn btn-primary" [routerLink]="['/posts/add']">Add Post</a>
+        </div>
         <table class="table table-striped" *ngIf="posts$ |async as postData">
             <thead>
                 <tr>   
@@ -18,5 +22,9 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div class="col-md-4">
+        <router-outlet></router-outlet>
     </div>
 </div>
