--- a/src/app/posts/editpost/editpost.component.html
+++ b/src/app/posts/editpost/editpost.component.html
@@ -1,1 +1,53 @@
 <p>editpost works!</p>
+<div class="row">
+        <h3>Update Post</h3>
+
+        <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
+            <div class="mb-3">
+                <label>Title</label>
+                  <input class="form-control" formControlName="title" />
+                  <div class="" 
+                    *ngIf="postForm.get('title').touched && 
+                      !postForm.get('title').valid">
+
+                      <div *ngIf="postForm.get('title').errors?.['required']">
+                          Title is required
+                      </div>
+                       
+                      <div *ngIf="postForm.get('title').errors?.['minlength']">
+                         Title should be minimum 6 characters
+                    </div>
+
+                  </div>
+            </div>
+            
+
+            <div class="mb-3">
+              <label>Description</label>
+              <textarea
+                class="form-control"
+                formControlName="description"
+              ></textarea>
+              <div
+                *ngIf="
+                  postForm.get('description').touched &&
+                  !postForm.get('description').valid
+                "
+              >
+                <div *ngIf="postForm.get('description').errors['required']">
+                  Description is required
+                </div>
+                <div *ngIf="postForm.get('description').errors['minlength']">
+                  Description should be minimum 10 characters
+                </div>
+              </div>
+            </div>
+            
+            <div class="my-3">
+                <button type="submit">Update Button</button>
+            </div>
+            
+        </form>
+   
+    
+</div>
