--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,16 +8,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+            <a class="nav-link active" aria-current="page" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/counter">Counter</a>
+            <a class="nav-link" [routerLink]="['/counter']">Counter</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/posts">Posts</a>
+            <a class="nav-link" [routerLink]="['/posts']">Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link" [routerLink]="['/auth/']">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/auth/signup']" >Signup</a>
           </li>
         </ul>
       </div>
