--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <button class="btn btn-primary" type="submit" [disabled]="!loginform.valid">Login</button>
+                    <button class="btn btn-primary" type="submit" >Login</button>
                 </div>
         </form>
     </div>
