commit latest changes

--- a/src/app/posts/postlist/postlist.component.html
+++ b/src/app/posts/postlist/postlist.component.html
@@ -22,6 +22,11 @@
 
                     <td>
                         <a href="#" class="btn btn-primary"[routerLink]="['edit',post.id]">Update</a>&nbsp;
+
+                        <a href="" class="btn btn-info" [routerLink]="['details', post.id]"
+                        >Details
+                      </a>&nbsp;
+
                         <button class="btn btn-danger" (click)="onDeletePost(post.id)">Delete</button>
                     </td>
                     
